# lafiyacore-edulafia

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  EduLafia_PRD_v2.0.md  IMPLEMENTATION_PLAN.md  README.md  README.seed.md  audit.py  bulk_ui_fix.js  docker-compose.vps.yml  docker-compose.yml  edulafia.yml  fix_attendance.js  fix_button_bug.js  fix_db.py  fix_duplicate_sx.js  fix_lint.js  fix_lint_2.js  fix_lint_3.js  fix_schemas.py  fix_types.js  fix_unused.js  generate_demo_data.py  package.json  patch_admin.py  patch_audit.py  patch_auth_email.py  patch_coverage.py  patch_db.py  patch_db2.py  patch_deletes.py  patch_env.py  patch_fkeys.py  patch_guardian_students.py  patch_guardian_ui.py  patch_health.py  (+16 more)
apps/backend/: Dockerfile  alembic.ini  package.json  pyproject.toml  test_output.txt
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_schema.py  002_academics_schema.py  003_attendance_schema.py  004_finance_schema.py  005_health_schema.py  006_staff_schema.py  007_parent_schema.py  008_intelligence_schema.py  009_admin_schema.py  010_operations_schema.py  011_resources_schema.py  012_hr_operations_schema.py  013_compliance_schema.py  014_governance_schema.py  41745a2b1bf7_add_modules.py  9cf313d669ed_add_school_id_to_lms_models.py  b9f2a7c1d0e3_add_student_documents_table.py  c4a7d2e9f1b0_encrypt_sick_bay_complaint_codes.py
apps/backend/scripts/: create_lms_backend.py  seed.py  test_login.py
apps/backend/src/edulafia/: __init__.py  config.py  database.py  dependencies.py  main.py  worker.py
apps/backend/src/edulafia/core/: arq_queue.py  audit.py  cookies.py  email.py  encryption.py  exceptions.py  https.py  logging.py  middleware.py  pagination.py  rate_limiter.py  redis_client.py  s3_client.py  security.py  security_headers.py  tasks.py  twilio_client.py
apps/backend/src/edulafia/models/: audit.py  base.py
apps/backend/src/edulafia/modules/: conftest.py
apps/backend/src/edulafia/schemas/: base.py
apps/backend/tests/: conftest.py
apps/backend/tests/e2e/: .gitkeep
apps/backend/tests/e2e/academics/: test_subjects_api.py
apps/backend/tests/e2e/admin/: test_admin_api.py
apps/backend/tests/e2e/attendance/: test_attendance_api.py
apps/backend/tests/e2e/auth/: test_auth_api.py
apps/backend/tests/e2e/finance/: test_finance_api.py
apps/backend/tests/e2e/guardians/: test_guardian_api.py
apps/backend/tests/e2e/health/: test_health_api.py
apps/backend/tests/e2e/intelligence/: test_intelligence_api.py
apps/backend/tests/integration/: .gitkeep  conftest.py  test_auth_flow.py  test_student_crud.py
apps/backend/tests/load/: locustfile.py  results.md
apps/backend/tests/unit/: .gitkeep
docs/: 00-project-overview.md  (+13 more)
(+504 files in other folders)
