[project]
name = "edulafia"
version = "0.1.0"
description = "EduLafia - Integrated school management and adolescent health surveillance platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.18",
    "redis[hiredis]>=5.2",
    "httpx>=0.28",
    "cryptography>=44.0",
    "structlog>=24.4",
    "boto3>=1.35",
    "Pillow>=11.0",
    "openpyxl>=3.1",
    "arq>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "httpx>=0.28",
    "factory-boy>=3.3",
    "faker>=33.0",
    "freezegun>=1.4",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "locust>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edulafia"]

[tool.coverage.run]
source = ["src/edulafia"]
omit = [
    "src/edulafia/modules/**/models.py",
    "src/edulafia/modules/**/schemas.py",
    "src/edulafia/modules/**/tests/*.py",
    "src/edulafia/schemas/*.py",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests", "src/edulafia/modules"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
    "security: marks security tests",
]
addopts = "--strict-markers -v --cov=src --cov-report=term --cov-report=xml --cov-fail-under=80"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
